# rust_santorini

./: Cargo.toml  README.md
benches/: benchmarks.rs
src/: action_score_algorithms.rs  bruteforce.rs  first_choice_player.rs  game_prediction.rs  genetic_ai.rs  lib.rs  main.rs  nn.rs  random_choice_player.rs  start_location_score_algorithms.rs
