[package]
name = "rust_santorini"
version = "0.1.0"
authors = ["Alex Williams <hughaw64@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
rayon = "1.3.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmarks"
harness = false

[profile.dev]
opt-level = 3

[profile.release]
debug = true